# nlp_todo_list

./: README.md  pyproject.toml
src/final_project/: cli.py  commands.py  models.py  nlp.py  storage.py
tests/: conftest.py  test_cli.py  test_commands.py  test_nlp.py  test_storage.py
