[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "admo", email = "adamo22805@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
final-project = "final_project:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"
