[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "admo", email = "adamo22805@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "python-dateutil>=2.9.0.post0",
    "rapidfuzz>=3.14.5",
    "rich>=15.0.0",
    "typer>=0.26.7",
]

[project.scripts]
todo = "final_project.cli:app"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]
